# shoot-them

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-windows.yml
Dependencies/: irrlicht-1.8.4.osx.patch
Editor/: CMakeLists.txt
Editor/Sources/: GameData.cpp
Game/: CMakeLists.txt
Game/Resources/shaders/: drunk.frag.glsl
Game/Sources/: ModernResourceManager.cpp
Game/src/: main.cpp  stdafx.h
Game/src/core/: ActionDispatcher.cpp  ActionDispatcher.h  ActionHandler.cpp  ActionHandler.h  Application.cpp  Application.h  QueueAction.cpp  QueueAction.h  Renderer.h  ResourceManager.h  State.cpp  State.h  StateManager.cpp  StateManager.h  UIElement.cpp  UIElement.h
Game/src/game/: EndGameMenu.h  GameActionDispatcher.cpp  GameActionDispatcher.h  GameActionHandler.cpp  GameActionHandler.h  GameGUI.cpp  GameGUI.h  GameState.cpp  GameState.h  MainMenu.h
Game/src/renderer/: IrrKlangSoundEngine.cpp  IrrKlangSoundEngine.h  IrrlichtApplication.cpp  IrrlichtApplication.h  IrrlichtEventReceiver.cpp  IrrlichtEventReceiver.h  IrrlichtGameGUI.cpp  IrrlichtGameGUI.h  IrrlichtHUD.cpp  IrrlichtHUD.h  IrrlichtRenderer.cpp  IrrlichtRenderer.h
_game/src/core/: Vector3.h
editor/: CMakeLists.txt
editor/resources/schemas/: scene.json
editor/src/: main.cpp
editor/src/widgets/imfiledialog/: ImFileDialog.cpp  ImFileDialog.h
editor/src/widgets/imguicolortextedit/: TextEditor.cpp  TextEditor.h
editor/src/widgets/imguicurveeditor/: ImGuiCurveEditor.cpp
editor/src/widgets/imnodes/: imnodes.cpp  imnodes.h  imnodes_internal.h
game/: CMakeLists.txt
game/_resources/shaders/: drunk.frag.glsl
game/resources/config/: settings.json
game/resources/scenes/: common.lua  level1.lua  level2.lua  level3.lua  level4.lua  main.lua
game/src/: main.cpp
game/src/core/: ActionDispatcher.cpp
game/src/game/: GameState.cpp
game/src/math/: Matrix3.h  Matrix4.h  Vector2.h  Vector3.h  Vector4.h
game/src/renderer/: IrrlichtEventReceiver.cpp  IrrlichtRenderer.cpp
game/src/rendering/: Camera.h  Renderer.h  ResourceManager.h
game/src/scripting/: LuaInterfaces.h  ScriptManager.h
game/src/system/: InputManager.h  ResourceManager.h  SceneManager.h
samples/19-gui/: ImGuiSfmlBackend.cpp
samples/27-animated-model/: main.cpp
samples/28-multi-draw-indirect/: main.cpp
samples/demo-scene-2/: AssimpMeshLoader.cpp
